# services/booking-core/src/common/http/list.dto.ts
@@ -4,6 +4,7 @@ import {
   IsInt,
   IsOptional,
   IsString,
+  IsUUID,
   Matches,
   Max,
   MaxLength,
@@ -17,4 +18,9 @@ export class ListDto {
     "CONFIRMED" | "CANCELLED";
   @IsOptional() @IsString() @Matches(/^\d{4}-\d{2}-\d{2}$/) date?: string;
   @IsOptional() @IsIn(["true", "false"]) managed?: string;
+  @IsOptional() @IsUUID("4") centerId?: string;
+  @IsOptional() @IsIn(["week", "month", "year"]) period?: string;
+  @IsOptional() @IsIn(["DAILY", "FIXED"]) type?: "DAILY" | "FIXED";
+  @IsOptional() @IsString() @Matches(/^\d{4}-\d{2}-\d{2}$/) dateFrom?: string;
+  @IsOptional() @IsString() @Matches(/^\d{4}-\d{2}-\d{2}$/) dateTo?: string;
 }
